--- a/Android App/res/layout-land/activity_main.xml
+++ b/Android App/res/layout-land/activity_main.xml
@@ -85,12 +85,31 @@
 
             </TableLayout>
 
-            <Button
-                android:id="@+id/button5"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/Water" />
+                android:layout_weight="3" >
+
+                <Button
+                    android:id="@+id/button5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:drawableRight="@drawable/waterdrop"
+                    android:text="@string/Water"
+                    android:visibility="gone" />
+
+                <ImageButton
+                    android:id="@+id/imageButton1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:adjustViewBounds="true"
+                    android:maxHeight="10dp"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/waterdrop" />
+
+            </LinearLayout>
+
         </LinearLayout>
 
 </LinearLayout>
