--- a/iOS App/BalconyGardener/BalconyGardener/Base.lproj/Main.storyboard
+++ b/iOS App/BalconyGardener/BalconyGardener/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6249" systemVersion="14A388a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="97G-Gx-yBu">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="97G-Gx-yBu">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6243"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -17,25 +17,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="flower.png" translatesAutoresizingMaskIntoConstraints="NO" id="U04-10-D8e">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="flower.png" translatesAutoresizingMaskIntoConstraints="NO" id="U04-10-D8e">
                                 <rect key="frame" x="16" y="72" width="280" height="520"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="blh-az-UDv">
-                                <rect key="frame" x="16" y="490" width="80" height="102"/>
-                                <state key="normal" image="waterdropButton.png">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="selected">
-                                    <color key="titleShadowColor" red="0.87614639945652173" green="0.87614639945652173" blue="0.87614639945652173" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleShadowColor" red="0.896484375" green="0.896484375" blue="0.896484375" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="waterButtonPushed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="y79-fe-G15"/>
-                                </connections>
-                            </button>
-                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Watering Signal sent" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cYU-Gz-fGz">
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Watering Signal sent" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cYU-Gz-fGz">
                                 <rect key="frame" x="104" y="530" width="158" height="21"/>
                                 <color key="backgroundColor" red="0.87614639949999995" green="0.87614639949999995" blue="0.87614639949999995" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -43,11 +28,11 @@
                                 <color key="textColor" red="0.91741677989130432" green="0.0" blue="0.010815110957410619" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="53" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="3lg-L4-c46">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="53" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="3lg-L4-c46">
                                 <rect key="frame" x="304" y="72" width="280" height="520"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MeasurementCell" textLabel="Hlk-fZ-ufN" detailTextLabel="UnC-FD-NXd" rowHeight="53" style="IBUITableViewCellStyleSubtitle" id="g6h-9T-Nsw" customClass="MeasurementCell" customModule="BalconyGardener" customModuleProvider="target">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="detailDisclosureButton" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MeasurementCell" textLabel="Hlk-fZ-ufN" detailTextLabel="UnC-FD-NXd" rowHeight="53" style="IBUITableViewCellStyleSubtitle" id="g6h-9T-Nsw" customClass="MeasurementCell" customModule="BalconyGardener" customModuleProvider="target">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="g6h-9T-Nsw" id="8Uu-7i-nrf">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -75,8 +60,39 @@
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="fVk-TA-3Fd"/>
                                 </connections>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="blh-az-UDv">
+                                <rect key="frame" x="16" y="437" width="119" height="155"/>
+                                <state key="normal" image="waterdropButton.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="selected">
+                                    <color key="titleShadowColor" red="0.87614639945652173" green="0.87614639945652173" blue="0.87614639945652173" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleShadowColor" red="0.896484375" green="0.896484375" blue="0.896484375" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="waterButtonPushed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="y79-fe-G15"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="U04-10-D8e" secondAttribute="bottom" constant="8" id="00T-Fg-5dm"/>
+                            <constraint firstItem="blh-az-UDv" firstAttribute="centerY" secondItem="cYU-Gz-fGz" secondAttribute="centerY" id="2II-U1-rNJ"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="3lg-L4-c46" secondAttribute="bottom" constant="8" id="4cR-fA-s17"/>
+                            <constraint firstItem="U04-10-D8e" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="b9h-Oh-1oD"/>
+                            <constraint firstItem="blh-az-UDv" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="ck6-lb-MyI"/>
+                            <constraint firstItem="blh-az-UDv" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="cmt-gU-b2P"/>
+                            <constraint firstItem="blh-az-UDv" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="dle-cD-My2"/>
+                            <constraint firstItem="U04-10-D8e" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="i9q-ab-Dbh"/>
+                            <constraint firstItem="cYU-Gz-fGz" firstAttribute="leading" secondItem="blh-az-UDv" secondAttribute="trailing" constant="8" id="iSq-eq-ZyM"/>
+                            <constraint firstItem="3lg-L4-c46" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="mju-0S-amP"/>
+                            <constraint firstItem="U04-10-D8e" firstAttribute="width" secondItem="3lg-L4-c46" secondAttribute="width" id="plg-RY-gl9"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="blh-az-UDv" secondAttribute="bottom" constant="8" id="tWE-eP-3WU"/>
+                            <constraint firstItem="3lg-L4-c46" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="yN3-ef-Qs2"/>
+                            <constraint firstItem="3lg-L4-c46" firstAttribute="leading" secondItem="U04-10-D8e" secondAttribute="trailing" constant="8" id="yOm-xk-2Pp"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="nFJ-3i-hTv"/>
                     <connections>
