--- a/iOS App/BalconyGardener/BalconyGardener/Base.lproj/Main.storyboard
+++ b/iOS App/BalconyGardener/BalconyGardener/Base.lproj/Main.storyboard
@@ -52,7 +52,7 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="q2p-XH-edL" kind="show" identifier="detail" id="f6g-Iy-kxp"/>
+                                            <segue destination="cC0-zX-p4y" kind="show" identifier="details" id="4mk-bB-yF8"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -116,7 +116,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="53" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="1na-C5-RYk">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="53" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="1na-C5-RYk">
                                 <rect key="frame" x="16" y="72" width="568" height="520"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -190,7 +190,7 @@
                         <viewControllerLayoutGuide type="bottom" id="aN0-sC-faB"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="MnN-a4-MKF" customClass="CPTGraphHostingView">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
